--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/BaseFintesso
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
+spring.main.allow-circular-references=true
+
+spring.sql.init.data-locations=classpath:/data.sql
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=DEBUG
+logging.level.org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration=DEBUG
+logging.level.org.hibernate=TRACE
+logging.level.org.springframework.jdbc=DEBUG
